packages/preview/parcio-slides/0.2.0/README.md
# The `parcio-slides` Polylux Template

<p align="center">
    <img src="thumbnails/p-01.png" width=40% alt="a slide preview image">
    <img src="thumbnails/p-02.png" width=40% alt="a slide preview image"><br/>
    <img src="thumbnails/p-03.png" width=40% alt="a slide preview image">
    <img src="thumbnails/p-04.png" width=40% alt="a slide preview image">
</p>

<p align="center">
A simple <a href="https://typst.app/universe/package/polylux/">polylux</a> slides template for the ParCIO working group at Otto-von-Guericke University Magdeburg.
</p>

## Getting Started

To use this template, simply import it as shown below and define a `title-slide` with the following possible options:

```typ
#import "@preview/parcio-slides:0.2.0": *

#show: parcio-theme.with(
  aspect-ratio: "16-9", // "16-9" and "4-3" are the only possible options.
  text-size: 20pt, // We recommend around this text size, as it fits nicely.
  style-raw-blocks: true, // Enable or disable the built-in code block style.
)

#title-slide(
  title: [],
  author: (name: "Your Name", mail: "example@ovgu.de"),
  subtitle: none,
  short-title: none,
  logo: none,
  date: datetime.today().display(),
  extra: none
)
```

These are the default options. We recommend leaving the show-rule as-is, such that you can just do `#show parcio-theme`, and
using the provided OvGU logo for your title slide (if you initialized with `typst init`) by specifying `logo: image("OVGU-INF.pdf", width: 9.8cm)`
on your title slide.

Multiple authors can be displayed by providing an array of dictionaries instead, like so: 
```typ
...
author: (
  (name: "Author One", mail: "author.one@ovgu.de"), 
  (name: "Author Two", mail: "author.two@ovgu.de")
),
...
```

The `short-title` is useful for specifying a shorter title which is displayed in the footer of each slide.
Additionally, `extra` can be used for specifying your lecture, institute or faculty. See `template/main.typ` for a full example!

### Slides

Creating slides is done via the `#slide()`-function with the following default arguments:

```typ
#slide(
  title: none, // title of your current slide
  new-section: none, // marks a new topic, add it to the outline and is displayed in the top-right 
  show-current-section: true, // whether to display the current section in the top-right
  show-footer: true, // whether to display the footer (disabled for `bib-slide` and `outline-slide`)
  skip: false, // whether to skip the page counter for this slide
  body,
)
```

Most often, you will use `#slide` like this: `#slide(title: "Introduction")[...]`—setting a title is important for the header bar to properly work!

#### Outline and Bibliography Slides

- You can use `#outline-slide(title: "Outline")` to create a slide which lists all of your sections you registered with `new-section`!
- You can use `#bib-slide(title: "References", bib)` to create a slide containing your bibliography. This slide will have slightly smaller text, justified paragraphs and expects
the actual `bibliography(..)` function call as a second argument.

#### Using `polylux` functions

In order to use `polylux` functions for dynamic slide management, such as `show: later` or `uncover`, importing those functions separately is necessary.
Additionally, this template uses a different page counter than that of `polylux`, so to achieve the correct dynamic slide numbering, manual fiddling is required
(the counter is accessible through `#counter("m-page")`).

### Local Installation

In order to make the template available locally under the `@local` namespace, clone this repository and refer to [Local Packages](https://github.com/typst/packages/#local-packages) or use the [Unofficial Typst Package Manager](https://github.com/typst-community/utpm).
You can also use the provided [`justfile`](https://github.com/parcio/templates/blob/ab2ce439485ee6e64c4fd8eb0d030171a341ff71/presentation-typst/justfile) to move this template to the correct location as well as generate up-to-date thumbnails for publishing.

## Fonts and OvGU Corporate Design

This template requires these two fonts to be installed on your system:

* Libertinus Sans (https://github.com/alerque/libertinus)
* Inconsolata (https://github.com/googlefonts/Inconsolata)

We bundle the default "Faculty of Computer Science" head banner and use it as the `logo`. You can find yours at: https://www.cd.ovgu.de/Fakult%C3%A4ten.html.

